<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >
    

    <TableLayout
        android:id="@+id/TableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textViewLNT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="Medium Text"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textViewDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textViewDelete" />

            <Button
                android:id="@+id/buttonDelete"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/buttonDelete" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textViewNOW"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textViewNumWells" />

            <EditText
                android:id="@+id/editTextNOW"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:width="100dp" >
                <requestFocus />
            </EditText>

        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textViewWaterW"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textViewInjectionWell" />

            <EditText
                android:id="@+id/editTextNIW"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:width="100dp" />

        </TableRow>
        
        <TableRow
        android:id="@+id/tableRow12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textViewStockTanks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewStockTanks" />

        <EditText
            android:id="@+id/editTextNST"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />

    </TableRow>

    </TableLayout>

    <TableLayout
        android:id="@+id/TableLayoutE"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

    </TableLayout>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buttonSaveExit"
                android:id="@+id/buttonSaveData"
                android:clickable="true"
                android:hint="@string/buttonSaveExit" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/buttonExit"
                android:id="@+id/buttonExit" />
        </TableRow>

    </LinearLayout>
</ScrollView>